sandbox/output
GiledeRose.java:61: error: method updateQuality() is already defined in class GildedRose
   public void updateQuality() {
               ^
GiledeRose.java:63: error: cannot find symbol
        if(items[i].isSellInLess0())
                   ^
  symbol:   method isSellInLess0()
  location: class Item
GiledeRose.java:69: error: cannot find symbol
    return (sellIn <=0) ;
            ^
  symbol:   variable sellIn
  location: class GildedRose
3 errors
